<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="weatherData"
            type="com.example.currentweatherdatabinding.dataclasses.WeatherData" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:weightSum="10"
            android:orientation="horizontal">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="7"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/linearLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent">

                    <TextView
                        android:id="@+id/degrees"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{String.valueOf(Math.round(weatherData.main.temp)) + ` ℃`}"
                        android:textColor="@{weatherData.main.temp > 0 ? @color/above_zero : @color/below_zero}"
                        android:textSize="56sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{String.valueOf(weatherData.description)}"
                        android:textSize="18sp" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@{@string/feels_like + ' ' + String.valueOf(Math.round(weatherData.main.feels_like)) + ` ℃`}"
                        android:textColor="@{weatherData.main.feels_like > 0 ? @color/above_zero : @color/below_zero}" />

                </LinearLayout>

                <ImageView
                    android:id="@+id/weather_icon"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@color/black"
                    app:layout_constraintBottom_toBottomOf="@+id/degrees"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/degrees"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="NotSibling" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="3"
                android:orientation="vertical"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="10dp"
                    android:layout_marginBottom="20dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/day_max"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="textEnd"
                        android:textColor="@{weatherData.main.temp_max > 0 ? @color/above_zero : @color/below_zero}"
                        android:text="@{String.valueOf(Math.round(weatherData.main.temp_max)) + ` ℃`}"
                        />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="10dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/day_min"/>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="textEnd"
                        android:textColor="@{weatherData.main.temp_min > 0 ? @color/above_zero : @color/below_zero}"
                        android:text="@{String.valueOf(Math.round(weatherData.main.temp_min)) + ` ℃`}"
                        />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@string/atmo_pressure"
                android:layout_marginBottom="5dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:text="@{String.valueOf(Math.round(weatherData.main.pressure / 1.33)) + ' ' + @string/atmo_pressure_units}"
                />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginRight="10dp"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/wind"
                    android:textSize="18sp"
                    android:layout_marginBottom="5dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{String.valueOf(weatherData.wind.speed) + ' ' + @string/wind_speed + ' ' + weatherData.wind.dir}"
                    />

            </LinearLayout>

            <ImageView
                android:id="@+id/informative_wind_speed"
                android:layout_gravity="bottom"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_marginRight="10dp"
                />

            <ImageView
                android:id="@+id/informative_wind_dir"
                android:layout_gravity="bottom"
                android:layout_width="32dp"
                android:layout_height="32dp"
                />


        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginRight="10dp"
                >

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/humidity"
                    android:textSize="18sp"
                    android:layout_marginBottom="5dp"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{String.valueOf(Math.round(weatherData.main.humidity)) + `%`}"
                    />

            </LinearLayout>

            <ImageView
                android:src="@drawable/ic_humidity"
                android:id="@+id/informative_humidity"
                android:layout_gravity="bottom"
                android:layout_width="32dp"
                android:layout_height="32dp"
                />


        </LinearLayout>

    </LinearLayout>

</layout>